published finished page

--- a/blog-details.html
+++ b/blog-details.html
@@ -758,7 +758,7 @@
 										<a href="#">Pool maintenance</a>
 									</li>
 									<li>
-										<a href="#">Pool refurbishment</a>
+										<a href="#">Pool construction</a>
 									</li>
 								</ul>
 							</div>
