--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							<div class="services-content">
 								<h3>
 									<a href="service-details.html">
-										Pool refurbishment
+										Pool construction
 									</a>
 								</h3>
 	
@@ -468,7 +468,7 @@
 							<span class="flaticon-swimming-pool"></span>
 							<h3>
 								<a href="service-details.html">
-									Pool refurbishment
+									Pool construction
 								</a>
 							</h3>
 
@@ -596,7 +596,7 @@
 							<span class="plans">Weekly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -615,7 +615,7 @@
 							<span class="plans">Monthly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -636,7 +636,7 @@
 							<span class="plans">Yearly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
