--- a/others/blog-column-one.html
+++ b/others/blog-column-one.html
@@ -633,7 +633,7 @@
 										<a href="#">Pool Maintenance</a>
 									</li>
 									<li>
-										<a href="#">Pool Refurbishment</a>
+										<a href="#">Pool construction</a>
 									</li>
 								</ul>
 							</div>
