--- a/others/blog-left-sidebar.html
+++ b/others/blog-left-sidebar.html
@@ -499,7 +499,7 @@
 										<a href="#">Pool Maintenance</a>
 									</li>
 									<li>
-										<a href="#">Pool Refurbishment</a>
+										<a href="#">Pool construction</a>
 									</li>
 								</ul>
 							</div>
