--- a/others/index-4.html
+++ b/others/index-4.html
@@ -452,7 +452,7 @@
 						<span class="flaticon-swimming-pool"></span>
 						<h3>
 							<a href="service-details.html">
-								Pool refurbishment
+								Pool construction
 							</a>
 						</h3>
 
@@ -832,7 +832,7 @@
 							<span class="plans">Weekly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -851,7 +851,7 @@
 							<span class="plans">Monthly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -872,7 +872,7 @@
 							<span class="plans">Yearly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
