--- a/services.html
+++ b/services.html
@@ -518,7 +518,7 @@
 									</li>
 									<li>
 										<a href="#">
-											Pool Refurbishment	
+											Pool construction	
 											<i class="bx bx-chevron-right"></i>
 										</a>
 									</li>
