--- a/others/index-3.html
+++ b/others/index-3.html
@@ -608,7 +608,7 @@
 									<span class="flaticon-swimming-pool"></span>
 									<h3>
 										<a href="service-details.html">
-											Pool refurbishment
+											Pool construction
 										</a>
 									</h3>
 
