--- a/others/services-style-three.html
+++ b/others/services-style-three.html
@@ -453,7 +453,7 @@
 							<div class="services-content">
 								<h3>
 									<a href="service-details.html">
-										Pool refurbishment
+										Pool construction
 									</a>
 								</h3>
 	
