--- a/pricing.html
+++ b/pricing.html
@@ -451,7 +451,7 @@
 							<span class="plans">Weekly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -470,7 +470,7 @@
 							<span class="plans">Monthly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -491,7 +491,7 @@
 							<span class="plans">Yearly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
