--- a/services-style-one.html
+++ b/services-style-one.html
@@ -448,7 +448,7 @@
 							<div class="services-content">
 								<h3>
 									<a href="service-details.html">
-										Pool refurbishment
+										Pool construction
 									</a>
 								</h3>
 	
@@ -565,7 +565,7 @@
 							<span class="flaticon-swimming-pool"></span>
 							<h3>
 								<a href="service-details.html">
-									Pool refurbishment
+									Pool construction
 								</a>
 							</h3>
 
@@ -645,7 +645,7 @@
 							<span class="plans">Weekly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -664,7 +664,7 @@
 							<span class="plans">Monthly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
@@ -685,7 +685,7 @@
 							<span class="plans">Yearly pool service plans</span>
 
 							<ul>
-								<li>Pool refurbishment</li>
+								<li>Pool construction</li>
 								<li>Pool cleaning</li>
 								<li>Pool renovation</li>
 								<li>Equipment inspection</li>
