--- a/index.html
+++ b/index.html
@@ -79,48 +79,6 @@
 									<i class="bx bx-phone-call"></i>
 									<a href="tel:+1-(514)-312-5678">+234 (803) 446-6293</a>
 								</div>
-
-								<ul class="flag-area">
-									<li class="flag-item-top">
-										<a href="#" class="flag-bar">
-											<span>Language</span>		
-											<i class="bx bx-chevron-down"></i>
-										</a>
-
-										<ul class="flag-item-bottom">
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/english.png" alt="Image">
-													English
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/arab.png" alt="Image">
-													العربيّة
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/germany.png" alt="Image">
-													Deutsch
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/portugal.png" alt="Image">
-													󠁥󠁮󠁧󠁿Português
-												</a>
-											</li>
-											<li class="flag-item">
-												<a href="#" class="flag-link">
-													<img src="assets/img/flag/china.png" alt="Image">
-													简体中文
-												</a>
-											</li>
-										</ul>
-									</li>
-								</ul>
 							</div>
 						</div>
 					</div>
@@ -1047,7 +1005,7 @@
 								<img src="assets/img/white-logo.png" alt="Image">
 							</a>
 
-							<p>Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua consec tetur adipiscing.</p>
+							<p>We are a leading company in Nigeria for pool construction and maintenance, hygiene and  equipment and service recognized for the Value, Quality $ Service.</p>
 						</div>
 					</div>
 
@@ -1100,15 +1058,15 @@
 							<ul class="address">
 								<li class="location">
 									<i class="bx bxs-location-plus"></i>
-									6890 Blvd, The Bronx, NY 1058 New York, USA
+									Block B Suite 15 Primal-Tek Plaza, Akowonjo Roundabout, Dopemu, Lagos Nigeria
 								</li>
 								<li>
 									<i class="bx bxs-envelope"></i>
-									<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#8ae2efe6e6e5caf9ebf9fae5e6a4e9e5e7"><span class="__cf_email__" data-cfemail="9bf3fef7f7f4dbe8fae8ebf4f7b5f8f4f6">[email&#160;protected]</span></a>
+									<a href="3"><span class="__cf_email__" data-cfemail="#">enquiries@rehobothpools.com</span></a>
 								</li>
 								<li>
 									<i class="bx bxs-phone-call"></i>
-									<a href="tel:+1-(514)-312-5678">+1 (514) 312-5678</a>
+									<a href="tel:+1-(514)-312-5678">+234 (803) 446-6293</a>
 								</li>
 							</ul>
 						</div>
@@ -1122,8 +1080,8 @@
 		<div class="copy-right-area">
 			<div class="container">
 				<p>
-					Copyright <i class="bx bx-copyright"></i>2021 SasPol. Designed By 
-					<a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+					Copyright <i class="bx bx-copyright"></i>2021 Rehobothpools Limited. Designed By 
+					<a href="https://infixdev.co" target="_blank">Infix Developers</a>
 				</p>
 			</div>
 		</div>
@@ -1137,35 +1095,34 @@
 		<!-- End Go Top Area -->
 		
 
-        <!-- Jquery Min JS -->
-        <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
-        <!-- Bootstrap Bundle Min JS -->
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <!-- Meanmenu Min JS -->
-		<script src="assets/js/meanmenu.min.js"></script>
-        <!-- Wow Min JS -->
-        <script src="assets/js/wow.min.js"></script>
-        <!-- Owl Carousel Min JS -->
-		<script src="assets/js/owl.carousel.min.js"></script>
-        <!-- Nice Select Min JS -->
-		<script src="assets/js/nice-select.min.js"></script>
-        <!-- Magnific Popup Min JS -->
-		<script src="assets/js/magnific-popup.min.js"></script>
-		<!-- Jarallax Min JS --> 
-		<script src="assets/js/jarallax.min.js"></script>
-		<!-- Appear Min JS --> 
-        <script src="assets/js/appear.min.js"></script>
-		<!-- Odometer Min JS --> 
-		<script src="assets/js/odometer.min.js"></script>
-		<!-- Form Validator Min JS -->
-		<script src="assets/js/form-validator.min.js"></script>
-		<!-- Contact JS -->
-		<script src="assets/js/contact-form-script.js"></script>
-		<!-- Ajaxchimp Min JS -->
-		<script src="assets/js/ajaxchimp.min.js"></script>
-        <!-- Custom JS -->
-		<script src="assets/js/custom.js"></script>
-    </body>
+	<!-- Jquery Min JS -->
+	<script data-cfasync="false" src="email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
+	<!-- Bootstrap Bundle Min JS -->
+	<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<!-- Meanmenu Min JS -->
+	<script src="assets/js/meanmenu.min.js"></script>
+	<!-- Wow Min JS -->
+	<script src="assets/js/wow.min.js"></script>
+	<!-- Owl Carousel Min JS -->
+	<script src="assets/js/owl.carousel.min.js"></script>
+			<!-- Nice Select Min JS -->
+	<script src="assets/js/nice-select.min.js"></script>
+			<!-- Magnific Popup Min JS -->
+	<script src="assets/js/magnific-popup.min.js"></script>
+	<!-- Jarallax Min JS --> 
+	<script src="assets/js/jarallax.min.js"></script>
+	<!-- Appear Min JS --> 
+	<script src="assets/js/appear.min.js"></script>
+	<!-- Odometer Min JS --> 
+	<script src="assets/js/odometer.min.js"></script>
+	<!-- Form Validator Min JS -->
+	<script src="assets/js/form-validator.min.js"></script>
+	<!-- Contact JS -->
+	<script src="assets/js/contact-form-script.js"></script>
+	<!-- Ajaxchimp Min JS -->
+	<script src="assets/js/ajaxchimp.min.js"></script>
+			<!-- Custom JS -->
+	<script src="assets/js/custom.js"></script>
+	</body>
 
-<!-- Mirrored from templates.envytheme.com/saspol/default/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Jun 2022 12:02:19 GMT -->
 </html>
