--- a/services-main.html
+++ b/services-main.html
@@ -206,144 +206,154 @@
 		<!-- End Header Area -->
 
 		<!-- Start Page Title Area -->
-		<div class="page-title-area bg-15">
+		<div class="page-title-area bg-19">
 			<div class="container">
 				<div class="page-title-content">
-					<h2>Contact</h2>
+					<h2>Services details</h2>
 					<ul>
 						<li>
 							<a href="index-2.html">
 								Home 
 							</a>
 						</li>
-						<li class="active">Contact</li>
+						<li class="active">Services details</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<!-- End Page Title Area -->
 
-		<!-- Start Contact Area -->
-		<section class="main-contact-area ptb-100">
+		<!-- Start Services Details Area -->
+		<section class="services-details-area pt-100 pb-70">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-4">
-						<div class="contact-info">
-							<h3>Our contact details</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+				<div class="row">
+					<div class="col-lg-8">
+						<div class="services-details-content">
+							<div class="services-contents">
+								<div class="services-details-one">
+									<img src="assets/img/services-details/services-details-1.jpg" alt="Image">
+								</div>
 
-							<ul class="address">
-								<li class="location">
-									<i class="bx bxs-location-plus"></i>
-									<span>Address</span>
-									6890 Blvd, The Bronx, NY 1058 New York, USA
-								</li>
-								<li>
-									<i class="bx bxs-phone-call"></i>
-									<span>Phone</span>
-									<a href="tel:+1-(514)-312-5678">+1 (514) 312-5678</a>
-									<a href="tel:+1-(514)-312-6677">+1 (514) 312-6677</a>
-								</li>
-								<li>
-									<i class="bx bxs-envelope"></i>
-									<span>Email</span>
-									<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#c8a0ada4a4a788bba9a9bbb8a7a4e6aba7a5"><span class="__cf_email__" data-cfemail="ed8588818182ad9e8c8c9e9d8281c38e8280">[email&#160;protected]</span></a>
-									<a href="#">skype: example</a>
-								</li>
-							</ul>
+								<h2>Pool cleaning services</h2>
+							</div>
 
-							<div class="sidebar-follow-us">
-								<h3>Follow us:</h3>
-			
-								<ul class="social-wrap">
-									<li>
-										<a href="#" target="_blank">
-											<i class="bx bxl-twitter"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" target="_blank">
-											<i class="bx bxl-instagram"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" target="_blank">
-											<i class="bx bxl-facebook"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" target="_blank">
-											<i class="bx bxl-youtube"></i>
-										</a>
-									</li>
+							<div class="services-contents">
+								<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. eum iriure dolor in</p>
+
+								<p>feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. eum iriure dolor in</p>
+							</div>
+
+							<div class="services-contents">
+								<h3>We want to clean your pool!</h3>
+								<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. nulla facilisi.</p>
+								
+								<ul>
+									<li>Brush & vacuum</li>
+									<li>Skimmer & pump basket cleaning</li>
+									<li>Water chemistry testing</li>
+									<li>Chemical additions & delivery</li>
+									<li>Electronic service completion reports</li>
 								</ul>
+							</div>
+
+							<div class="services-contents">
+								<h3>Experienced pool cleaning professionals</h3>
+								<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. eum iriure dolor in</p>
+
+								<p>feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. eum iriure dolor in</p>
+							</div>
+
+							<div class="services-contents">
+								<h3>Schedule your regular pool cleaning today</h3>
+								<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. eum iriure dolor in</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-lg-8">
-						<div class="contact-wrap">
-							<div class="contact-form">
-								<div class="contact-title">
-									<h2>Ready to get started?</h2>
-								</div>
+					<div class="col-lg-4">
+						<div class="services-sidebar">
+							<div class="services-category">
+								<ul>
+									<li>
+										<a href="#">
+											Pool Cleaning	
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool Services	
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool Renovation
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool Construction	
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool Maintenance	
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool construction	
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											Pool Remodeling
+											<i class="bx bx-chevron-right"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
 
-								<form id="contactForm">
-									<div class="row">
-										<div class="col-lg-6 col-sm-6">
-											<div class="form-group">
-												<label>Name</label>
-												<input type="text" name="name" id="name" class="form-control" required data-error="Please enter your name">
-												<div class="help-block with-errors"></div>
-											</div>
-										</div>
-			
-										<div class="col-lg-6 col-sm-6">
-											<div class="form-group">
-												<label>Email Address</label>
-												<input type="email" name="email" id="email" class="form-control" required data-error="Please enter your email">
-												<div class="help-block with-errors"></div>
-											</div>
-										</div>
-			
-										<div class="col-12">
-											<div class="form-group">
-												<label>Subject</label>
-												<input type="text" name="msg_subject" id="msg_subject" class="form-control" required data-error="Please enter your subject">
-												<div class="help-block with-errors"></div>
-											</div>
-										</div>
-			
-										<div class="col-12">
-											<div class="form-group">
-												<label>Message</label>
-												<textarea name="message" class="form-control" id="message" cols="30" rows="10" required data-error="Write your message"></textarea>
-												<div class="help-block with-errors"></div>
-											</div>
-										</div>
-			
-										<div class="col-lg-12 col-md-12">
-											<button type="submit" class="default-btn">
-												<span>Send message</span>
-											</button>
-											<div id="msgSubmit" class="h3 text-center hidden"></div>
-											<div class="clearfix"></div>
-										</div>
-									</div>
-								</form>
+							<div class="address">
+								<h3>Contact us today</h3>
+								<ul>
+									<li class="location">
+										<span>Address</span>
+										: 6890 Blvd, The Bronx, NY 1058 New York, USA
+									</li>
+									<li>
+										<span>Email</span>
+										<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#f098959c9c9fb083919183809f9cde939f9d">: <span class="__cf_email__" data-cfemail="8de5e8e1e1e2cdfeececfefde2e1a3eee2e0">[email&#160;protected]</span></a>
+									</li>
+									<li>
+										<span>Call us</span>
+										<a href="tel:+1-(514)-312-5678">+1 (514) 312-5678</a>
+									</li>
+									<li>
+										<span>Mon - Fri</span>
+										: 09:00 AM - 05:30 PM
+									</li>
+									<li>
+										<span>Saturday</span>
+										: 09:00 AM - 04:00 PM
+									</li>
+									<li>
+										<span>Sunday</span>
+										: Closed
+									</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End Contact Area -->
-
-		<!-- Start Map Area -->
-		<div class="map-area">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96573.31103674119!2d-73.91097366523668!3d40.85176866829554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c28b553a697cb1%3A0x556e43a78ff15c77!2sThe%20Bronx%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1600202608808!5m2!1sen!2sbd"></iframe>
-		</div>
-		<!-- End Map Area -->
+		<!-- End Services Details Area -->
 
 		<!-- Start Subscribe Area -->
 		<section class="subscribe-area">
@@ -439,7 +449,7 @@
 								</li>
 								<li>
 									<i class="bx bxs-envelope"></i>
-									<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#553d3039393a15263426253a397b363a38"><span class="__cf_email__" data-cfemail="f29a979e9e9db2819381829d9edc919d9f">[email&#160;protected]</span></a>
+									<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#274f424b4b486754465457484b0944484a"><span class="__cf_email__" data-cfemail="e189848d8d8ea1928092918e8dcf828e8c">[email&#160;protected]</span></a>
 								</li>
 								<li>
 									<i class="bx bxs-phone-call"></i>
@@ -502,5 +512,5 @@
 		<script src="assets/js/custom.js"></script>
     </body>
 
-<!-- Mirrored from templates.envytheme.com/saspol/default/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Jun 2022 12:03:00 GMT -->
+<!-- Mirrored from templates.envytheme.com/saspol/default/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Jun 2022 12:02:22 GMT -->
 </html>
