--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 							<div class="collapse navbar-collapse mean-menu">
 								<ul class="navbar-nav m-auto">
 									<li class="nav-item">
-										<a href="#" class="nav-link">Home</a>
+										<a href="index.html" class="nav-link">Home</a>
 
 									<li class="nav-item">
 										<a href="about.html" class="nav-link">About</a>
@@ -269,11 +269,6 @@
 									<li>
 										<a href="#" target="_blank">
 											<i class="bx bxl-facebook"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#" target="_blank">
-											<i class="bx bxl-youtube"></i>
 										</a>
 									</li>
 								</ul>
