--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 								</a>
 							</h3>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+							<p>we utillize the space you have in offering you all kind of swimming pools tailored to meet your demand</p>
 						</div>
 					</div>
 
@@ -442,7 +442,7 @@
 								</a>
 							</h3>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+							<p>We specialise in redesigning any existing pool to suit your taste, with our engineers you are sure to have the best.</p>
 						</div>
 					</div>
 
@@ -455,7 +455,7 @@
 								</a>
 							</h3>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+							<p>We offer sales and repairs of swimming pool equipment, we also install and implement pool safety modules & equipment.</p>
 						</div>
 					</div>
 
@@ -464,11 +464,11 @@
 							<span class="flaticon-swimming-pool-2"></span>
 							<h3>
 								<a href="service-details.html">
-									Pool tile cleaning
+									Pool maintainace
 								</a>
 							</h3>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+							<p>We provide pramatic approach to purification and treatment of contaminated water and adjusting chemical balance</p>
 						</div>
 					</div>
 
@@ -477,11 +477,11 @@
 							<span class="flaticon-swimming-pool-1"></span>
 							<h3>
 								<a href="service-details.html">
-									Solar pool heating
+									Fountain construction
 								</a>
 							</h3>
 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+							<p>fountain facilities ranges from water curtains to floating fountains to dry fountains. We built a stand-alone</p>
 						</div>
 					</div>
 				</div>
@@ -549,7 +549,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="single-pricing">
 							<h3>Basic plan</h3>
-							<h2>29<Sub>$</Sub></h2>
+							<h2>10,000<Sub>₦</Sub></h2>
 							<span class="plans">Weekly pool service plans</span>
 
 							<ul>
@@ -568,7 +568,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="single-pricing active">
 							<h3>Ultra plan</h3>
-							<h2>99<Sub>$</Sub></h2>
+							<h2>25,000<Sub>₦</Sub></h2>
 							<span class="plans">Monthly pool service plans</span>
 
 							<ul>
@@ -589,7 +589,7 @@
 					<div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
 						<div class="single-pricing">
 							<h3>Enterprise plan</h3>
-							<h2>999<Sub>$</Sub></h2>
+							<h2>40,000<Sub>₦</Sub></h2>
 							<span class="plans">Yearly pool service plans</span>
 
 							<ul>
@@ -711,7 +711,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="single-team">
 							<div class="image">
-								<img src="assets/img/team/team-2.jpg" alt="image">
+								<img src="assets/img/team/team-1.jpg" alt="image">
 	
 								<ul class="social">
 									<li>
@@ -739,7 +739,7 @@
 	
 							<div class="content">
 								<h3>Frank Lester</h3>
-								<span>Marketing manager</span>
+								<span>Engineer</span>
 							</div>
 						</div>
 					</div>
@@ -747,7 +747,7 @@
 					<div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
 						<div class="single-team">
 							<div class="image">
-								<img src="assets/img/team/team-3.jpg" alt="image">
+								<img src="assets/img/team/team-1.jpg" alt="image">
 	
 								<ul class="social">
 									<li>
@@ -834,7 +834,7 @@
 							<div class="single-contact-info">
 								<i class="flaticon-location"></i>
 								<h3>Visit us</h3>
-								<span>6890 Blvd, The Bronx, NY <br> 1058 New York, USA</span>
+								<span>Block B Suite 15 Primal-Tek Plaza, Akowonjo Roundabout,<br>Dopemu, Lagos, Nigeria</span>
 							</div>
 						</div>
 
@@ -842,8 +842,8 @@
 							<div class="single-contact-info">
 								<i class="flaticon-24-hours-support"></i>
 								<h3>Call us</h3>
-								<a href="tel:+1-(514)-312-5678">+1 (514) 312-5678</a>
-								<a href="tel:+1-(514)-312-6688">+1 (514) 312-6688</a>
+								<a href="tel:+1-(514)-312-5678">+234 (803) 446-6293</a>
+								<a href="tel:+1-(514)-312-6688">+234 (706) 521-9641</a>
 							</div>
 						</div>
 
@@ -851,8 +851,8 @@
 							<div class="single-contact-info">
 								<i class="flaticon-email"></i>
 								<h3>Visit us</h3>
-								<a href="https://templates.envytheme.com/cdn-cgi/l/email-protection#5c34393030331c2f3d2f2c3330723f3331"><span class="__cf_email__" data-cfemail="e088858c8c8fa0938193908f8cce838f8d">[email&#160;protected]</span></a>
-								<a href="#">Skype: saspol</a>
+								<a href="#"><span class="__cf_email__" data-cfemail="#">enquiries@rehobothpools.com</span></a>
+								<a href="#"></a>
 							</div>
 						</div>
 					</div>
@@ -874,7 +874,7 @@
 
 					<div class="col-lg-4">
 						<div class="section-btn">
-							<a href="blog-column-one.html" class="default-btn">
+							<a href="blog.html" class="default-btn">
 								<span>View all</span>
 							</a>
 						</div>
