--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!doctype html>
+to<!doctype html>
 <html lang="zxx">
     
 <!-- Mirrored from templates.envytheme.com/saspol/default/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Jun 2022 12:02:35 GMT -->
@@ -571,6 +571,7 @@
 			</div>
 		</div>
 		<!-- End Copy Right Area -->
+error page modified 
 		
 		<!-- Start Go Top Area -->
 		<div class="go-top">
