about page completed

--- a/about.html
+++ b/about.html
@@ -34,7 +34,8 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>Rehoboth Pools - Pool Constuction & maintenance Agency</title>
+		<title>Rehoboth Pools Limited</title>
+		<meta name="description" content="A pool construction and maintenance company">
     </head>
 
     <body>
@@ -236,8 +237,8 @@
 					<div class="col-lg-6">
 						<div class="about-content">
 							<span class="top-title">Who we are</span>
-							<h2>We are a friendly and professional pool services & renovation company</h2>
-							<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+							<h2>We are a professional pool company</h2>
+							<p>We deploy the best & the highest quality equipment, material & workmanship in a quack/cheap infested industry so you avoid buyers's remorse and without stress, Escape the daily heat & unwind in you outdoor paradise.</p>
 
 							<a href="about.html" class="default-btn">
 								<span>Read more</span>
@@ -266,7 +267,7 @@
 							</a>
 						</h3>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>we utillize the space you have in offering you all kind of swimming pools tailored to meet your demand</p>
 						
 						<a href="service-details.html" class="read-more">
 							Read more
@@ -282,7 +283,7 @@
 							</a>
 						</h3>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>We specialise in redesigning any existing pool to suit your taste, with our engineers you are sure to have the best.</p>
 
 						<a href="service-details.html" class="read-more">
 							Read more
@@ -298,7 +299,7 @@
 							</a>
 						</h3>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>We offer sales and repairs of swimming pool equipment, we also install and implement pool safety modules & equipment.</p>
 
 						<a href="service-details.html" class="read-more">
 							Read more
@@ -310,11 +311,11 @@
 						<span class="flaticon-swimming-pool-2"></span>
 						<h3>
 							<a href="service-details.html">
-								Pool tile cleaning
+								Pool Maintenance
 							</a>
 						</h3>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+						<p>We provide pramatic approach to purification and treatment of contaminated water and adjusting chemical balance</p>
 
 						<a href="service-details.html" class="read-more">
 							Read more
@@ -387,7 +388,7 @@
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-counter">
 							<h2>
-								<span class="odometer" data-count="900">00</span>
+								<span class="odometer" data-count="10">00</span>
 							</h2>
 
 							<h3>Year established</h3>
@@ -397,7 +398,7 @@
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-counter">
 							<h2>
-								<span class="odometer" data-count="500">00</span> 
+								<span class="odometer" data-count="20">00</span> 
 							</h2>
 
 							<h3>Projects completed</h3>
@@ -407,7 +408,7 @@
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-counter">
 							<h2>
-								<span class="odometer" data-count="795">00</span> 
+								<span class="odometer" data-count="65">00</span> 
 							</h2>
 
 							<h3>Happy customers</h3>
@@ -417,10 +418,10 @@
 					<div class="col-lg-3 col-sm-6">
 						<div class="single-counter">
 							<h2>
-								<span class="odometer" data-count="500">00</span> 
+								<span class="odometer" data-count="12">00</span> 
 							</h2>
 
-							<h3>Countries reached</h3>
+							<h3>States reached</h3>
 						</div>
 					</div>
 				</div>
@@ -483,7 +484,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="single-team">
 							<div class="image">
-								<img src="assets/img/team/team-2.jpg" alt="image">
+								<img src="assets/img/team/team-1.jpg" alt="image">
 	
 								<ul class="social">
 									<li>
@@ -519,7 +520,7 @@
 					<div class="col-lg-4 col-sm-6 offset-sm-3 offset-lg-0">
 						<div class="single-team">
 							<div class="image">
-								<img src="assets/img/team/team-3.jpg" alt="image">
+								<img src="assets/img/team/team-1.jpg" alt="image">
 	
 								<ul class="social">
 									<li>
@@ -632,7 +633,7 @@
 								<img src="assets/img/white-logo.png" alt="Image">
 							</a>
 
-							<p>We are a leading company in Nigeria for pool construction and maintenance, hygiene and  equipment and service recognized for the Value, Quality $ Service.</p>
+							<p>We are a leading company in Nigeria for pool construction and maintenance, hygiene and  equipment and service recognized for the Value, Quality & Service.</p>
 						</div>
 					</div>
 
