--- a/coming-soon.html
+++ b/coming-soon.html
@@ -34,7 +34,7 @@
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		<!-- Title -->
-		<title>SasPol - Pool Cleaning & Renovation HTML Template</title>
+		<title>Rehoboth Pools - Pool Constuction & maintenance Agency</title>
     </head>
 
     <body>
@@ -93,34 +93,33 @@
 		
 
         <!-- Jquery Min JS -->
-        <script src="assets/js/jquery.min.js"></script>
-        <!-- Bootstrap Bundle Min JS -->
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <!-- Meanmenu Min JS -->
-		<script src="assets/js/meanmenu.min.js"></script>
-        <!-- Wow Min JS -->
-        <script src="assets/js/wow.min.js"></script>
-        <!-- Owl Carousel Min JS -->
-		<script src="assets/js/owl.carousel.min.js"></script>
-        <!-- Nice Select Min JS -->
-		<script src="assets/js/nice-select.min.js"></script>
-        <!-- Magnific Popup Min JS -->
-		<script src="assets/js/magnific-popup.min.js"></script>
-		<!-- Jarallax Min JS --> 
-		<script src="assets/js/jarallax.min.js"></script>
-		<!-- Appear Min JS --> 
-        <script src="assets/js/appear.min.js"></script>
-		<!-- Odometer Min JS --> 
-		<script src="assets/js/odometer.min.js"></script>
-		<!-- Form Validator Min JS -->
-		<script src="assets/js/form-validator.min.js"></script>
-		<!-- Contact JS -->
-		<script src="assets/js/contact-form-script.js"></script>
-		<!-- Ajaxchimp Min JS -->
-		<script src="assets/js/ajaxchimp.min.js"></script>
-        <!-- Custom JS -->
-		<script src="assets/js/custom.js"></script>
-    </body>
+	<script data-cfasync="false" src="email-decode.min.js"></script><script src="assets/js/jquery.min.js"></script>
+	<!-- Bootstrap Bundle Min JS -->
+	<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<!-- Meanmenu Min JS -->
+	<script src="assets/js/meanmenu.min.js"></script>
+	<!-- Wow Min JS -->
+	<script src="assets/js/wow.min.js"></script>
+	<!-- Owl Carousel Min JS -->
+	<script src="assets/js/owl.carousel.min.js"></script>
+			<!-- Nice Select Min JS -->
+	<script src="assets/js/nice-select.min.js"></script>
+			<!-- Magnific Popup Min JS -->
+	<script src="assets/js/magnific-popup.min.js"></script>
+	<!-- Jarallax Min JS --> 
+	<script src="assets/js/jarallax.min.js"></script>
+	<!-- Appear Min JS --> 
+	<script src="assets/js/appear.min.js"></script>
+	<!-- Odometer Min JS --> 
+	<script src="assets/js/odometer.min.js"></script>
+	<!-- Form Validator Min JS -->
+	<script src="assets/js/form-validator.min.js"></script>
+	<!-- Contact JS -->
+	<script src="assets/js/contact-form-script.js"></script>
+	<!-- Ajaxchimp Min JS -->
+	<script src="assets/js/ajaxchimp.min.js"></script>
+			<!-- Custom JS -->
+	<script src="assets/js/custom.js"></script>
+	</body>
 
-<!-- Mirrored from templates.envytheme.com/saspol/default/coming-soon.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Jun 2022 12:02:35 GMT -->
 </html>
